--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
     </nav>
     <main>
         <section id="sun" class="planet">
-            <h2>The Sun</h2>
-            <img src="Images/sun_picture.png" alt="Sun picture" class="picture" id="sunimg">
-            <div class="tooltip" id="sunTooltip">The Sun is the star at the center of our solar system...</div>
-            <p class="description">The Sun is a nearly perfect sphere of hot plasma and the most important source of energy for life on Earth...</p>
+            <div class="content">
+                <img src="Images/sun_picture.png" alt="Sun picture" class="picture" id="sunimg">
+                <div class="text">
+                    <h2>The Sun</h2>
+                    <p class="description">The Sun is a nearly perfect sphere of hot plasma and the most important source of energy for life on Earth...</p>
+                </div>
+            </div>
         </section>
         <section id="mercury" class="planet">
             <h2>Mercury</h2>
@@ -80,6 +83,5 @@
     <footer>
         <p>&copy; 2024 Solar System Exploration. All rights reserved.</p>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="script.js"></script>
 </body>
