--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,57 +28,81 @@
                 <img src="Images/sun_picture.png" alt="Sun picture" class="picture" id="sunimg">
                 <div class="text">
                     <h2>The Sun</h2>
-                    <p class="description">The Sun is a nearly perfect sphere of hot plasma and the most important source of energy for life on Earth...</p>
+                    <p>The Sun is the star at the center of our solar system...</p>
                 </div>
             </div>
         </section>
         <section id="mercury" class="planet">
-            <h2>Mercury</h2>
-            <img src="Images/mercury_picture.png" alt="Mercury picture" class="picture" id="mercuryimg">
-            <div class="tooltip" id="mercuryTooltip">Mercury is the closest planet to the Sun and the smallest planet in our solar system...</div>
-            <p class="description">Mercury has a very thin atmosphere and experiences extreme temperatures due to its proximity to the Sun...</p>
+            <div class="content">
+                <img src="Images/mercury_picture.png" alt="Mercury picture" class="picture" id="mercuryimg">
+                <div class="text">
+                    <h2>Mercury</h2>
+                    <p>Mercury is the closest planet to the Sun and the smallest planet in our solar system...</p>
+                </div>
+            </div>
         </section>
         <section id="venus" class="planet">
-            <h2>Venus</h2>
-            <img src="Images/venus_picture.png" alt="Venus picture" class="picture" id="venusimg">
-            <div class="tooltip" id="venusTooltip">Venus is the second planet from the Sun and has a thick, toxic atmosphere...</div>
-            <p class="description">Venus is often called Earth's sister planet because of their similar size and composition...</p>
+            <div class="content">
+                <img src="Images/venus_picture.png" alt="Venus picture" class="picture" id="venusimg">
+                <div class="text">
+                    <h2>Venus</h2>
+                    <p>Venus is the second planet from the Sun and has a thick, toxic atmosphere...</p>
+                </div>
+            </div>
         </section>
         <section id="earth" class="planet">
-            <h2>Earth</h2>
-            <img src="Images/earth_picture.png" alt="Earth picture" class="picture" id="earthimg">
-            <div class="tooltip" id="earthTooltip">Earth is the third planet from the Sun and the only known planet to support life...</div>
-            <p class="description">Earth is a unique haven in the solar system with its diverse climate and abundant water...</p>
+            <div class="content">
+                <img src="Images/earth_picture.png" alt="Earth picture" class="picture" id="earthimg">
+                <div class="text">
+                    <h2>Earth</h2>
+                    <p>Earth is the third planet from the Sun and the only known planet to support life...</p>
+                </div>
+            </div>
         </section>
         <section id="mars" class="planet">
-            <h2>Mars</h2>
-            <img src="Images/mars_picture.png" alt="Mars picture" class="picture" id="marsimg">
-            <div class="tooltip" id="marsTooltip">Mars, the fourth planet, is known as the Red Planet...</div>
-            <p class="description">Mars is home to the tallest volcano and the deepest, longest canyon in the solar system...</p>
+            <div class="content">
+                <img src="Images/mars_picture.png" alt="Mars picture" class="picture" id="marsimg">
+                <div class="text">
+                    <h2>Mars</h2>
+                    <p>Mars, the fourth planet, is known as the Red Planet...</p>
+                </div>
+            </div>
         </section>
         <section id="jupiter" class="planet">
-            <h2>Jupiter</h2>
-            <img src="Images/jupiter_picture.png" alt="jupiter picture" class="picture" id="jupiterimg">
-            <div class="tooltip" id="jupiterTooltip">Jupiter is the largest planet in our solar system, a gas giant...</div>
-            <p class="description">Jupiter has a massive magnetic field and over 79 moons, including Ganymede, the largest moon in the solar system...</p>
+            <div class="content">
+                <img src="Images/jupiter_picture.png" alt="Jupiter picture" class="picture" id="jupiterimg">
+                <div class="text">
+                    <h2>Jupiter</h2>
+                    <p>Jupiter is the largest planet in our solar system, a gas giant...</p>
+                </div>
+            </div>
         </section>
         <section id="saturn" class="planet">
-            <h2>Saturn</h2>
-            <img src="Images/saturn_picture.png" alt="Saturn picture" class="picture" id="saturnimg">
-            <div class="tooltip" id="saturnTooltip">Saturn is famous for its stunning ring system made of ice and rock...</div>
-            <p class="description">Saturn is the second-largest planet and has over 80 moons, with Titan being the most notable...</p>
+            <div class="content">
+                <img src="Images/saturn_picture.png" alt="Saturn picture" class="picture" id="saturnimg">
+                <div class="text">
+                    <h2>Saturn</h2>
+                    <p>Saturn is famous for its stunning ring system made of ice and rock...</p>
+                </div>
+            </div>
         </section>
         <section id="uranus" class="planet">
-            <h2>Uranus</h2>
-            <img src="Images/uranus_picture.png" alt="Uranus picture" class="picture" id="uranusimg">
-            <div class="tooltip" id="uranusTooltip">Uranus is unique as it rotates on its side...</div>
-            <p class="description">Uranus is an ice giant with a cold atmosphere and faint rings, and it has 27 known moons...</p>
+            <div class="content">
+                <img src="Images/uranus_picture.png" alt="Uranus picture" class="picture" id="uranusimg">
+                <div class="text">
+                    <h2>Uranus</h2>
+                    <p>Uranus is unique as it rotates on its side...</p>
+                </div>
+            </div>
         </section>
         <section id="neptune" class="planet">
-            <h2>Neptune</h2>
-            <img src="Images/neptune_picture.png" alt="Neptune picture" class="picture" id="neptuneimg">
-            <div class="tooltip" id="neptuneTooltip">Neptune, the farthest planet from the Sun, is known for its striking blue color...</div>
-            <p class="description">Neptune is a cold, windy ice giant with 14 known moons, including Triton...</p>
+            <div class="content">
+                <img src="Images/neptune_picture.png" alt="Neptune picture" class="picture" id="neptuneimg">
+                <div class="text">
+                    <h2>Neptune</h2>
+                    <p>Neptune, the farthest planet from the Sun, is known for its striking blue color...</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
@@ -85,3 +110,4 @@
     </footer>
     <script src="script.js"></script>
 </body>
+</html>
