szaturnusz kép + háttérszín

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </section>
         <section id="saturn" class="planet">
             <div class="content">
-                <img src="Images/saturn_picture.png" alt="Saturn picture" class="picture" id="saturnimg">
+                <img src="Images/saturn_picture_sokadik.png" alt="Saturn picture" class="picture" id="saturnimg">
                 <div class="text">
                     <h2>Saturn</h2>
                     <p>Saturn is famous for its stunning ring system made of ice and rock...</p>
