--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
             </div>
         </section>
     </main>
+    <button id="scrollToTop">Scroll to Top</button>
+
     <footer>
         <p>&copy; 2024 Solar System Exploration. All rights reserved.</p>
     </footer>
