--- a/index.html
+++ b/index.html
@@ -25,82 +25,82 @@
     <main>
         <section id="sun" class="planet">
             <div class="content">
-                <img src="Images/sun_picture.png" alt="Sun picture" class="picture" id="sunimg">
+                <a href=""><img src="Images/sun_picture.png" alt="Sun picture" class="picture" id="sunimg"></a>
                 <div class="text">
                     <h2>The Sun</h2>
-                    <p>The Sun is the star at the center of our solar system...</p>
+                    <p>The Sun is the massive star at the center of our solar system, providing light and energy to all the planets.</p>
                 </div>
             </div>
         </section>
         <section id="mercury" class="planet">
             <div class="content">
-                <img src="Images/mercury_picture.png" alt="Mercury picture" class="picture" id="mercuryimg">
+                <a href=""><img src="Images/mercury_picture.png" alt="Mercury picture" class="picture" id="mercuryimg"></a>
                 <div class="text">
                     <h2>Mercury</h2>
-                    <p>Mercury is the closest planet to the Sun and the smallest planet in our solar system...</p>
+                    <p>Mercury is the smallest planet and the closest to the Sun, known for its scorching days and freezing nights.</p>
                 </div>
             </div>
         </section>
         <section id="venus" class="planet">
             <div class="content">
-                <img src="Images/venus_picture.png" alt="Venus picture" class="picture" id="venusimg">
+                <a href=""><img src="Images/venus_picture.png" alt="Venus picture" class="picture" id="venusimg"></a>
                 <div class="text">
                     <h2>Venus</h2>
-                    <p>Venus is the second planet from the Sun and has a thick, toxic atmosphere...</p>
+                    <p>Venus, often called Earth’s twin, has a thick, toxic atmosphere and surface temperatures hot enough to melt lead.</p>
                 </div>
             </div>
         </section>
         <section id="earth" class="planet">
             <div class="content">
-                <img src="Images/earth_picture.png" alt="Earth picture" class="picture" id="earthimg">
+                <a href=""><img src="Images/earth_picture.png" alt="Earth picture" class="picture" id="earthimg"></a>
                 <div class="text">
                     <h2>Earth</h2>
-                    <p>Earth is the third planet from the Sun and the only known planet to support life...</p>
+                    <p>Earth is the only planet known to support life, with diverse ecosystems and abundant water.</p>
                 </div>
             </div>
         </section>
         <section id="mars" class="planet">
             <div class="content">
-                <img src="Images/mars_picture.png" alt="Mars picture" class="picture" id="marsimg">
+                <a href=""><img src="Images/mars_picture.png" alt="Mars picture" class="picture" id="marsimg"></a>
                 <div class="text">
                     <h2>Mars</h2>
-                    <p>Mars, the fourth planet, is known as the Red Planet...</p>
+                    <p>Mars, the Red Planet, is home to the tallest volcano and some of the most fascinating exploration targets in the solar system.</p>
                 </div>
             </div>
         </section>
         <section id="jupiter" class="planet">
             <div class="content">
-                <img src="Images/jupiter_picture.png" alt="Jupiter picture" class="picture" id="jupiterimg">
+                <a href=""><img src="Images/jupiter_picture.png" alt="Jupiter picture" class="picture" id="jupiterimg"></a>
                 <div class="text">
                     <h2>Jupiter</h2>
-                    <p>Jupiter is the largest planet in our solar system, a gas giant...</p>
+                    <p>Jupiter is the largest planet, famous for its giant red storm and over 70 moons.</p>
                 </div>
             </div>
         </section>
         <section id="saturn" class="planet">
             <div class="content">
-                <img src="Images/saturn_picture_sokadik.png" alt="Saturn picture" class="picture" id="saturnimg">
+                <a href=""><img src="Images/saturn_picture_sokadik.png" alt="Saturn picture" class="picture" id="saturnimg"></a>
                 <div class="text">
                     <h2>Saturn</h2>
-                    <p>Saturn is famous for its stunning ring system made of ice and rock...</p>
+                    <p>Saturn stands out with its stunning ring system made of ice and rock particles.</p>
                 </div>
             </div>
         </section>
         <section id="uranus" class="planet">
             <div class="content">
-                <img src="Images/uranus_picture.png" alt="Uranus picture" class="picture" id="uranusimg">
+                <a href=""><img src="Images/uranus_picture.png" alt="Uranus picture" class="picture" id="uranusimg"></a>
                 <div class="text">
                     <h2>Uranus</h2>
-                    <p>Uranus is unique as it rotates on its side...</p>
+                    <p>Uranus is an icy giant that rotates on its side, giving it unique seasons and a bluish-green hue.</p>
                 </div>
             </div>
         </section>
         <section id="neptune" class="planet">
             <div class="content">
-                <img src="Images/neptune_picture.png" alt="Neptune picture" class="picture" id="neptuneimg">
+                <a href=""><img src="Images/neptune_picture.png" alt="Neptune picture" class="picture" id="neptuneimg"></a>
                 <div class="text">
                     <h2>Neptune</h2>
-                    <p>Neptune, the farthest planet from the Sun, is known for its striking blue color...</p>
+                    <p>Neptune is the farthest planet, known for its deep blue color and the fastest winds in the solar system.</p>
                 </div>
             </div>
         </section>
