--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
         <a href="#saturn">Saturn</a>
         <a href="#uranus">Uranus</a>
         <a href="#neptune">Neptune</a>
+        <a href="#pluto">Pluto</a>
     </nav>
     <main>
         <section id="sun" class="planet">
             <div class="content">
-                <a href=""><img src="Images/sun_picture.png" alt="Sun picture" class="picture" id="sunimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Sun" target="_blank"><img src="Images/sun_picture.png" alt="Sun picture" class="picture" id="sunimg"></a>
                 <div class="text">
                     <h2>The Sun</h2>
                     <p>The Sun is the massive star at the center of our solar system, providing light and energy to all the planets.</p>
@@ -34,7 +35,7 @@
         </section>
         <section id="mercury" class="planet">
             <div class="content">
-                <a href=""><img src="Images/mercury_picture.png" alt="Mercury picture" class="picture" id="mercuryimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Mercury_(planet)" target="_blank"><img src="Images/mercury_picture.png" alt="Mercury picture" class="picture" id="mercuryimg"></a>
                 <div class="text">
                     <h2>Mercury</h2>
                     <p>Mercury is the smallest planet and the closest to the Sun, known for its scorching days and freezing nights.</p>
@@ -43,7 +44,7 @@
         </section>
         <section id="venus" class="planet">
             <div class="content">
-                <a href=""><img src="Images/venus_picture.png" alt="Venus picture" class="picture" id="venusimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Venus" target="_blank"><img src="Images/venus_picture.png" alt="Venus picture" class="picture" id="venusimg"></a>
                 <div class="text">
                     <h2>Venus</h2>
                     <p>Venus, often called Earth’s twin, has a thick, toxic atmosphere and surface temperatures hot enough to melt lead.</p>
@@ -52,7 +53,7 @@
         </section>
         <section id="earth" class="planet">
             <div class="content">
-                <a href=""><img src="Images/earth_picture.png" alt="Earth picture" class="picture" id="earthimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Earth" target="_blank"><img src="Images/earth_picture.png" alt="Earth picture" class="picture" id="earthimg"></a>
                 <div class="text">
                     <h2>Earth</h2>
                     <p>Earth is the only planet known to support life, with diverse ecosystems and abundant water.</p>
@@ -61,7 +62,7 @@
         </section>
         <section id="mars" class="planet">
             <div class="content">
-                <a href=""><img src="Images/mars_picture.png" alt="Mars picture" class="picture" id="marsimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Mars" target="_blank"><img src="Images/mars_picture.png" alt="Mars picture" class="picture" id="marsimg"></a>
                 <div class="text">
                     <h2>Mars</h2>
                     <p>Mars, the Red Planet, is home to the tallest volcano and some of the most fascinating exploration targets in the solar system.</p>
@@ -70,7 +71,7 @@
         </section>
         <section id="jupiter" class="planet">
             <div class="content">
-                <a href=""><img src="Images/jupiter_picture.png" alt="Jupiter picture" class="picture" id="jupiterimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Jupiter" target="_blank"><img src="Images/jupiter_picture.png" alt="Jupiter picture" class="picture" id="jupiterimg"></a>
                 <div class="text">
                     <h2>Jupiter</h2>
                     <p>Jupiter is the largest planet, famous for its giant red storm and over 70 moons.</p>
@@ -79,7 +80,7 @@
         </section>
         <section id="saturn" class="planet">
             <div class="content">
-                <a href=""><img src="Images/saturn_picture_sokadik.png" alt="Saturn picture" class="picture" id="saturnimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Saturn" target="_blank"><img src="Images/saturn_picture_sokadik.png" alt="Saturn picture" class="picture" id="saturnimg"></a>
                 <div class="text">
                     <h2>Saturn</h2>
                     <p>Saturn stands out with its stunning ring system made of ice and rock particles.</p>
@@ -88,7 +89,7 @@
         </section>
         <section id="uranus" class="planet">
             <div class="content">
-                <a href=""><img src="Images/uranus_picture.png" alt="Uranus picture" class="picture" id="uranusimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Uranus" target="_blank"><img src="Images/uranus_picture.png" alt="Uranus picture" class="picture" id="uranusimg"></a>
                 <div class="text">
                     <h2>Uranus</h2>
                     <p>Uranus is an icy giant that rotates on its side, giving it unique seasons and a bluish-green hue.</p>
@@ -97,10 +98,21 @@
         </section>
         <section id="neptune" class="planet">
             <div class="content">
-                <a href=""><img src="Images/neptune_picture.png" alt="Neptune picture" class="picture" id="neptuneimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Neptune" target="_blank"><img src="Images/neptune_picture.png" alt="Neptune picture" class="picture" id="neptuneimg"></a>
                 <div class="text">
                     <h2>Neptune</h2>
                     <p>Neptune is the farthest planet, known for its deep blue color and the fastest winds in the solar system.</p>
+                </div>
+            </div>
+        </section>
+        <section id="pluto">
+            <div class="planet">
+                <div class="content">
+                    <a href="https://en.wikipedia.org/wiki/Pluto" target="_blank"><img src="Images/pluto_picture.png" alt="Pluto picture" class="picture" id="plutoimg"></a>
+                    <div class="text">
+                        <h2>Pluto</h2>
+                        <p>Pluto, the dwarf planet, lies in the icy Kuiper Belt and is known for its heart-shaped glacier and mysterious surface.</p>
+                    </div>
                 </div>
             </div>
         </section>
