--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                 </div>
             </div>
         </section>
+
+        <img src="Images/asteroid_belt.png" alt="Asteroid Belt" id="abelt" class="picture">
+
         <section id="jupiter" class="planet">
             <div class="content">
                 <a href="https://en.wikipedia.org/wiki/Jupiter" target="_blank"><img src="Images/jupiter_picture.png" alt="Jupiter picture" class="picture" id="jupiterimg"></a>
