--- a/far_solar_system/index.html
+++ b/far_solar_system/index.html
@@ -12,68 +12,68 @@
         <h1>Welcome to the Solar System</h1>
     </header>
     <nav>
-        <a href="#sun">Sun</a>
-        <a href="#mercury">Mercury</a>
-        <a href="#venus">Venus</a>
-        <a href="#earth">Earth</a>
-        <a href="#mars">Mars</a>
-        <a href="#jupiter">Jupiter</a>
+        <a href="#pluto">Pluto</a>
+        <a href="#halleys">Halley's comet</a>
+        <a href="#haumea">Haumea</a>
+        <a href="#eris">Eris</a>
+        <a href="#makemake">Makemake</a>
+        <a href="#sedna">Sedna</a>
         <a href="#saturn">Saturn</a>
         <a href="#uranus">Uranus</a>
         <a href="#neptune">Neptune</a>
+        <a href="#pluto">Pluto</a>
     </nav>
     <main>
-        <section id="sun" class="planet">
-            <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Sun" target="_blank"><img src="Images/sun_picture.png" alt="Sun picture" class="picture" id="sunimg"></a>
-                <div class="text">
-                    <h2>The Sun</h2>
-                    <p>The Sun is the massive star at the center of our solar system, providing light and energy to all the planets.</p>
+        <section id="pluto">
+            <div class="planet">
+                <div class="content">
+                    <a href="https://en.wikipedia.org/wiki/Pluto" target="_blank"><img src="../Images/pluto_picture.png" alt="Pluto picture" class="picture" id="plutoimg"></a>
+                    <div class="text">
+                        <h2>Pluto</h2>
+                        <p>Pluto, the dwarf planet, lies in the icy Kuiper Belt and is known for its heart-shaped glacier and mysterious surface.</p>
+                    </div>
                 </div>
             </div>
         </section>
-        <section id="mercury" class="planet">
+        <section id="halleys" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Mercury_(planet)" target="_blank"><img src="Images/mercury_picture.png" alt="Mercury picture" class="picture" id="mercuryimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Mercury_(planet)" target="_blank"><img src="../Images/halley_comet_picture.png" alt="Halley's comet picture" class="picture" id="mercuryimg"></a>
                 <div class="text">
-                    <h2>Mercury</h2>
+                    <h2>Halley's comet</h2>
                     <p>Mercury is the smallest planet and the closest to the Sun, known for its scorching days and freezing nights.</p>
                 </div>
             </div>
         </section>
-        <section id="venus" class="planet">
+        <section id="haumea" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Venus" target="_blank"><img src="Images/venus_picture.png" alt="Venus picture" class="picture" id="venusimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Venus" target="_blank"><img src="../Images/haumea_picture.png" alt="Haumea picture" class="picture" id="venusimg"></a>
                 <div class="text">
-                    <h2>Venus</h2>
+                    <h2>Haumea</h2>
                     <p>Venus, often called Earth’s twin, has a thick, toxic atmosphere and surface temperatures hot enough to melt lead.</p>
                 </div>
             </div>
         </section>
-        <section id="earth" class="planet">
+        <section id="eris" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Earth" target="_blank"><img src="Images/earth_picture.png" alt="Earth picture" class="picture" id="earthimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Earth" target="_blank"><img src="../Images/eris_picture.png" alt="Eris picture" class="picture" id="earthimg"></a>
                 <div class="text">
-                    <h2>Earth</h2>
+                    <h2>Eris</h2>
                     <p>Earth is the only planet known to support life, with diverse ecosystems and abundant water.</p>
                 </div>
             </div>
         </section>
-        <section id="mars" class="planet">
+        <section id="makemake" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Mars" target="_blank"><img src="Images/mars_picture.png" alt="Mars picture" class="picture" id="marsimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Mars" target="_blank"><img src="../Images/makemake.png" alt="Makemake picture" class="picture" id="marsimg"></a>
                 <div class="text">
-                    <h2>Mars</h2>
+                    <h2>Makemake</h2>
                     <p>Mars, the Red Planet, is home to the tallest volcano and some of the most fascinating exploration targets in the solar system.</p>
                 </div>
             </div>
         </section>
-
-        <img src="Images/asteroid_belt.png" alt="Asteroid Belt" id="abelt" class="picture">
-
-        <section id="jupiter" class="planet">
+        <section id="Sedna" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Jupiter" target="_blank"><img src="Images/jupiter_picture.png" alt="Jupiter picture" class="picture" id="jupiterimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Jupiter" target="_blank"><img src="../Images/sedna_picture.png" alt="Jupiter picture" class="picture" id="jupiterimg"></a>
                 <div class="text">
                     <h2>Jupiter</h2>
                     <p>Jupiter is the largest planet, famous for its giant red storm and over 70 moons.</p>
@@ -104,6 +104,17 @@
                 <div class="text">
                     <h2>Neptune</h2>
                     <p>Neptune is the farthest planet, known for its deep blue color and the fastest winds in the solar system.</p>
+                </div>
+            </div>
+        </section>
+        <section id="pluto">
+            <div class="planet">
+                <div class="content">
+                    <a href="https://en.wikipedia.org/wiki/Pluto" target="_blank"><img src="Images/pluto_picture.png" alt="Pluto picture" class="picture" id="plutoimg"></a>
+                    <div class="text">
+                        <h2>Pluto</h2>
+                        <p>Pluto, the dwarf planet, lies in the icy Kuiper Belt and is known for its heart-shaped glacier and mysterious surface.</p>
+                    </div>
                 </div>
             </div>
         </section>
