--- a/far_solar_system/index.html
+++ b/far_solar_system/index.html
@@ -27,7 +27,7 @@
         <section id="pluto">
             <div class="planet">
                 <div class="content">
-                    <a href="https://en.wikipedia.org/wiki/Pluto" target="_blank"><img src="../Images/pluto_picture.png" alt="Pluto picture" class="picture" id="plutoimg"></a>
+                    <a href="https://en.wikipedia.org/wiki/Pluto" target="_blank"><img src="../Images/pluto_picture.png" alt="Pluto picture" class="picture"></a>
                     <div class="text">
                         <h2>Pluto</h2>
                         <p>Pluto, the dwarf planet, lies in the icy Kuiper Belt and is known for its heart-shaped glacier and mysterious surface.</p>
@@ -37,52 +37,52 @@
         </section>
         <section id="halleys" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Mercury_(planet)" target="_blank"><img src="../Images/halley_comet_picture.png" alt="Halley's comet picture" class="picture" id="mercuryimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Mercury_(planet)" target="_blank"><img src="../Images/halley_comet_picture.png" alt="Halley's comet picture" class="picture"></a>
                 <div class="text">
                     <h2>Halley's comet</h2>
-                    <p>Mercury is the smallest planet and the closest to the Sun, known for its scorching days and freezing nights.</p>
+                    <p>The most famous periodic comet, Halley's Comet, dazzles Earth every 76 years with its radiant tail and storied past.</p>
                 </div>
             </div>
         </section>
         <section id="haumea" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Venus" target="_blank"><img src="../Images/haumea_picture.png" alt="Haumea picture" class="picture" id="venusimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Venus" target="_blank"><img src="../Images/haumea_picture.png" alt="Haumea picture" class="picture"></a>
                 <div class="text">
                     <h2>Haumea</h2>
-                    <p>Venus, often called Earth’s twin, has a thick, toxic atmosphere and surface temperatures hot enough to melt lead.</p>
+                    <p>A dwarf planet with an unusual elongated shape, Haumea stands out with its rapid rotation and icy surface.</p>
                 </div>
             </div>
         </section>
         <section id="eris" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Earth" target="_blank"><img src="../Images/eris_picture.png" alt="Eris picture" class="picture" id="earthimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Earth" target="_blank"><img src="../Images/eris_picture.png" alt="Eris picture" class="picture"></a>
                 <div class="text">
                     <h2>Eris</h2>
-                    <p>Earth is the only planet known to support life, with diverse ecosystems and abundant water.</p>
+                    <p>A dwarf planet more massive than Pluto, Eris resides in the distant Kuiper Belt, challenging our definition of planets.</p>
                 </div>
             </div>
         </section>
         <section id="makemake" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Mars" target="_blank"><img src="../Images/makemake.png" alt="Makemake picture" class="picture" id="marsimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Mars" target="_blank"><img src="../Images/makemake.png" alt="Makemake picture" class="picture"></a>
                 <div class="text">
                     <h2>Makemake</h2>
-                    <p>Mars, the Red Planet, is home to the tallest volcano and some of the most fascinating exploration targets in the solar system.</p>
+                    <p>This reddish dwarf planet is one of the coldest objects in the solar system, quietly orbiting in the far reaches of space.</p>
                 </div>
             </div>
         </section>
-        <section id="Sedna" class="planet">
+        <section id="sedna" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Jupiter" target="_blank"><img src="../Images/sedna_picture.png" alt="Jupiter picture" class="picture" id="jupiterimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Jupiter" target="_blank"><img src="../Images/sedna_picture.png" alt="Jupiter picture" class="picture"></a>
                 <div class="text">
-                    <h2>Jupiter</h2>
-                    <p>Jupiter is the largest planet, famous for its giant red storm and over 70 moons.</p>
+                    <h2>Sedna</h2>
+                    <p>An enigmatic, far-flung planetoid, Sedna’s mysterious orbit hints at the hidden wonders of our solar system's edge.</p>
                 </div>
             </div>
         </section>
         <section id="saturn" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Saturn" target="_blank"><img src="Images/saturn_picture_sokadik.png" alt="Saturn picture" class="picture" id="saturnimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Saturn" target="_blank"><img src="Images/saturn_picture_sokadik.png" alt="Saturn picture" class="picture"></a>
                 <div class="text">
                     <h2>Saturn</h2>
                     <p>Saturn stands out with its stunning ring system made of ice and rock particles.</p>
@@ -91,7 +91,7 @@
         </section>
         <section id="uranus" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Uranus" target="_blank"><img src="Images/uranus_picture.png" alt="Uranus picture" class="picture" id="uranusimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Uranus" target="_blank"><img src="Images/uranus_picture.png" alt="Uranus picture" class="picture"></a>
                 <div class="text">
                     <h2>Uranus</h2>
                     <p>Uranus is an icy giant that rotates on its side, giving it unique seasons and a bluish-green hue.</p>
@@ -100,21 +100,10 @@
         </section>
         <section id="neptune" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Neptune" target="_blank"><img src="Images/neptune_picture.png" alt="Neptune picture" class="picture" id="neptuneimg"></a>
+                <a href="https://en.wikipedia.org/wiki/Neptune" target="_blank"><img src="Images/neptune_picture.png" alt="Neptune picture" class="picture"></a>
                 <div class="text">
                     <h2>Neptune</h2>
                     <p>Neptune is the farthest planet, known for its deep blue color and the fastest winds in the solar system.</p>
-                </div>
-            </div>
-        </section>
-        <section id="pluto">
-            <div class="planet">
-                <div class="content">
-                    <a href="https://en.wikipedia.org/wiki/Pluto" target="_blank"><img src="Images/pluto_picture.png" alt="Pluto picture" class="picture" id="plutoimg"></a>
-                    <div class="text">
-                        <h2>Pluto</h2>
-                        <p>Pluto, the dwarf planet, lies in the icy Kuiper Belt and is known for its heart-shaped glacier and mysterious surface.</p>
-                    </div>
                 </div>
             </div>
         </section>
