--- a/far_solar_system/index.html
+++ b/far_solar_system/index.html
@@ -18,10 +18,7 @@
         <a href="#eris">Eris</a>
         <a href="#makemake">Makemake</a>
         <a href="#sedna">Sedna</a>
-        <a href="#saturn">Saturn</a>
-        <a href="#uranus">Uranus</a>
-        <a href="#neptune">Neptune</a>
-        <a href="#pluto">Pluto</a>
+        <a href="../index.html">Inner Solar System</a>
     </nav>
     <main>
         <section id="pluto">
@@ -77,33 +74,6 @@
                 <div class="text">
                     <h2>Sedna</h2>
                     <p>An enigmatic, far-flung planetoid, Sedna’s mysterious orbit hints at the hidden wonders of our solar system's edge.</p>
-                </div>
-            </div>
-        </section>
-        <section id="saturn" class="planet">
-            <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Saturn" target="_blank"><img src="Images/saturn_picture_sokadik.png" alt="Saturn picture" class="picture"></a>
-                <div class="text">
-                    <h2>Saturn</h2>
-                    <p>Saturn stands out with its stunning ring system made of ice and rock particles.</p>
-                </div>
-            </div>
-        </section>
-        <section id="uranus" class="planet">
-            <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Uranus" target="_blank"><img src="Images/uranus_picture.png" alt="Uranus picture" class="picture"></a>
-                <div class="text">
-                    <h2>Uranus</h2>
-                    <p>Uranus is an icy giant that rotates on its side, giving it unique seasons and a bluish-green hue.</p>
-                </div>
-            </div>
-        </section>
-        <section id="neptune" class="planet">
-            <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Neptune" target="_blank"><img src="Images/neptune_picture.png" alt="Neptune picture" class="picture"></a>
-                <div class="text">
-                    <h2>Neptune</h2>
-                    <p>Neptune is the farthest planet, known for its deep blue color and the fastest winds in the solar system.</p>
                 </div>
             </div>
         </section>
