--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
         <a href="#saturn">Saturn</a>
         <a href="#uranus">Uranus</a>
         <a href="#neptune">Neptune</a>
+        <a href="far_solar_system/index.html">Outer Solar System</a>
     </nav>
     <main>
         <section id="sun" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Sun" target="_blank"><img src="Images/sun_picture.png" alt="Sun picture" class="picture" id="sunimg"></a>
+                <a href="information_pages/sun.html"><img src="Images/sun_picture.png" alt="Sun picture" class="picture" id="sunimg"></a>
                 <div class="text">
                     <h2>The Sun</h2>
                     <p>The Sun is the massive star at the center of our solar system, providing light and energy to all the planets.</p>
